# cocaine-worker-generic

./: .gitignore  CMakeLists.txt  README.md
debian/: changelog  control
include/: worker.hpp
src/: main.cpp  worker.cpp
